<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="18sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/startDown"
                android:onClick="onClick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_bg"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/t1"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/t1_desc"
                    android:textColor="#cacaca"
                    android:textSize="12sp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#cacaca"/>

            <LinearLayout
                android:id="@+id/allDownloadss"
                android:onClick="onClick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_bg"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/t2"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/t_desc"
                    android:textColor="#cacaca"
                    android:textSize="12sp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#cacaca"/>

            <LinearLayout
                android:id="@+id/downloads"
                android:onClick="onClick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_bg"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/t3"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/t_desc"
                    android:textColor="#cacaca"
                    android:textSize="12sp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#cacaca"/>

            <LinearLayout
                android:id="@+id/complete"
                android:onClick="onClick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_bg"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/t4"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/t_desc"
                    android:textColor="#cacaca"
                    android:textSize="12sp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#cacaca"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
